--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "xrm-csvw-workflow",
+  "name": "xrm-xml-workflow",
   "version": "1.0.0",
   "description": "Barnard59 pipeline with sensible defaults",
   "type": "module",
   "main": "index.js",
   "scripts": {
     "start": "mkdir -p output && barnard59 run -v --pipeline=http://example.org/pipeline/toFile pipelines/main.ttl",
-    "file-to-file": "mkdir -p output && barnard59 run -v --pipeline=http://example.org/pipeline/fileToFile pipelines/main.ttl",
     "to-file": "mkdir -p output && barnard59 run -v --pipeline=http://example.org/pipeline/toFile pipelines/main.ttl",
     "file-to-store": "barnard59 run -v --pipeline=http://example.org/pipeline/fileToStore pipelines/main.ttl --variable=ENDPOINT_URL --variable=ENDPOINT_USER --variable=ENDPOINT_PASSWORD",
     "file-to-store-dev": "barnard59 run -v --pipeline=http://example.org/pipeline/fileToStore pipelines/main.ttl",
@@ -18,8 +17,7 @@
   "bugs": {},
   "dependencies": {
     "barnard59": "^1.1.2",
-    "barnard59-carml": "github:zazuko/barnard59-carml#33c1c7461e96f32a73cde61108848852af043d96",
-    "barnard59-csvw": "^1.0.0",
+    "barnard59-carml-service": "^0.0.1",
     "barnard59-formats": "^1.2.0",
     "barnard59-graph-store": "^1.0.1",
     "barnard59-rdf": "^1.3.1",
