--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "to-file": "mkdir -p output && barnard59 run -v --pipeline=http://example.org/pipeline/toFile pipelines/main.ttl",
     "file-to-store": "barnard59 run -v --pipeline=http://example.org/pipeline/fileToStore pipelines/main.ttl --variable=ENDPOINT_URL --variable=ENDPOINT_USER --variable=ENDPOINT_PASSWORD",
     "file-to-store-dev": "barnard59 run -v --pipeline=http://example.org/pipeline/fileToStore pipelines/main.ttl",
-    "to-store-dev": "barnard59 run -v --pipeline=http://example.org/pipeline/toStore pipelines/main.ttl",
-    "test": "stricter-standard"
+    "to-store": "barnard59 run -v --pipeline=http://example.org/pipeline/toStore pipelines/main.ttl --variable=ENDPOINT_URL --variable=ENDPOINT_USER --variable=ENDPOINT_PASSWORD",
+    "to-store-dev": "barnard59 run -v --pipeline=http://example.org/pipeline/toStore pipelines/main.ttl"
   },
   "author": "Zazuko",
   "license": "MIT",
@@ -20,10 +20,6 @@
     "barnard59-carml-service": "^0.0.1",
     "barnard59-formats": "^1.3.0",
     "barnard59-graph-store": "^1.0.1",
-    "barnard59-rdf": "^1.3.1",
-    "rdf-ext": "^2.2.0"
-  },
-  "devDependencies": {
-    "stricter-standard": "^0.2.0"
+    "barnard59-rdf": "^1.3.1"
   }
 }
